# plato-dialogues

./: deploy.sh  pyproject.toml  update-content.sh
docker/: Dockerfile  docker-compose.yml  start-web.sh
src/: main.py  script.ipynb
src/content/: gorgias.json  symposium.html  symposium.json
src/templates/: 404.j2  dialogue.j2  dialogue_info.j2  dialogue_item.j2  main.j2
